<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- nav drawer -->
    <string name="nav_content_001">Customer ID</string>
    <string name="nav_content_002">NOTICE</string>
    <string name="nav_content_003">CS/CENTER</string>
    <string name="nav_content_004">Language</string>
    <string name="nav_content_005">Facebook BNKC (Cambodia)</string>
    <string name="nav_content_006">Company Profile</string>
    <string name="nav_content_007">Settings</string>
    <string name="nav_content_008">ភាសា</string>

    <!-- menu bottom navigation view  -->
    <string name="menu_nav_notice">Notice</string>
    <string name="menu_find_customer">Find Customer</string>
    <string name="menu_check_list">Check List</string>
    <string name="menu">Menu</string>

    <!-- currency -->
    <string name="currency_usd">USD</string>
    <string name="currency_kip">Kip</string>

    <!-- error -->
    <string name="no_network_title">No Internet Connection</string>
    <string name="no_network_message">Please check your internet connection and try again.</string>
    <string name="server_currently_under_maintenance">We are currently undergoing\n maintenance. Will be right back.</string>
    <string name="server_maintenance">Server is\nBeing Maintenance</string>
    <string name="service_during_process">The server is temporarily unable to service your request due to maintenance downtime or capacity problems. Please try again later.</string>
    <string name="service_unavailable">Service Unavailable</string>

    <!-- permission -->
    <string name="notice">Notice</string>
    <string name="permission_denied">Permission denied, please update in setting.</string>

    <!-- photo setting menu -->
    <string name="camera">Take a photo</string>
    <string name="gallery">Choose from gallery</string>

    <!-- sign up -->
    <string name="already_signed_up">You Already Signed Up</string>
    <string name="already_signed_up_msg">Phone number has already registered. Please login using PIN.</string>
    <string name="not_signed_up_yet">You Haven\'t\nSigned Up Yet</string>
    <string name="not_yet_signed_up_msg">This phone number hasn’t signed\nup for BNK Account. Please Sign\nUp now.</string>

    <!-- general -->
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm">Confirm</string>
    <string name="try_again">Try Again</string>
    <string name="error">Error</string>
    <string name="close">Close</string>

</resources>