<?xml version="1.0" encoding="utf-8"?>
<layout>

<!--    <data>-->
<!--        <variable-->
<!--            name="profile"-->
<!--            type="com.mobile.bnk.model.account.GetMyProfileResponse" />-->
<!--    </data>-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <!-- Profile -->
        <LinearLayout
            android:id="@+id/ll_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_loading"
                    android:layout_centerInParent="true"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    tools:text="Ko Young Kwon vfgdfbbdgf fgfgfdfgs"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:layout_marginBottom="2dp"
                    style="@style/font_18_263238_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_content_001"
                    style="@style/font13_263238_regular"/>

                <TextView
                    android:id="@+id/tv_user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="EXAMPLE3250"
                    style="@style/font13_d7191f_bold"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:id="@+id/btn_notice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="4dp">

                <TextView
                    style="@style/font14_d7191f_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/nav_content_002"
                    android:drawableLeft="@drawable/ic_notice_ico"
                    android:drawablePadding="2dp"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeMaxTextSize="14sp"
                    android:autoSizeStepGranularity="5sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_cs_center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="4dp"
                android:orientation="horizontal">


                <TextView
                    style="@style/font14_d7191f_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:drawablePadding="2dp"
                    android:drawableLeft="@drawable/ic_cs_center_ico"
                    android:text="@string/nav_content_003"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeMaxTextSize="14sp"
                    android:autoSizeStepGranularity="5sp"/>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_eaedf5"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/btn_language"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:gravity="center_vertical"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nav_content_004"
                android:drawableLeft="@drawable/ic_lang_ico"
                android:gravity="center_vertical"
                android:drawablePadding="10dp"
                style="@style/font15_263238_medium"/>

            <TextView
                android:id="@+id/tv_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                style="@style/font15_d7191f_medium"
                android:drawableEnd="@drawable/ic_en_flag"
                android:drawablePadding="10dp"
                android:gravity="center_vertical" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_eaedf5"
            android:layout_marginLeft="60dp"/>

<!--        <LinearLayout-->
<!--            android:id="@+id/btn_facebook"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="56dp"-->
<!--            android:paddingLeft="25dp"-->
<!--            android:paddingRight="25dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:clickable="true">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/nav_content_005"-->
<!--                android:drawableLeft="@drawable/ic_fb_ico"-->
<!--                android:gravity="center_vertical"-->
<!--                android:drawablePadding="10dp"-->
<!--                style="@style/font15_263238_medium"/>-->

<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/nav_content_005"
            android:drawableLeft="@drawable/ic_fb_ico"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            style="@style/font15_263238_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_eaedf5"
            android:layout_marginLeft="60dp"/>

<!--        <LinearLayout-->
<!--            android:id="@+id/btn_company_profile"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="56dp"-->
<!--            android:paddingLeft="25dp"-->
<!--            android:paddingRight="25dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:clickable="true">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/nav_content_006"-->
<!--                android:drawableLeft="@drawable/ic_com_profile_ico"-->
<!--                android:gravity="center_vertical"-->
<!--                android:drawablePadding="10dp"-->
<!--                style="@style/font15_263238_medium"/>-->

<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/btn_company_profile"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/nav_content_006"
            android:drawableLeft="@drawable/ic_com_profile_ico"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            style="@style/font15_263238_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_eaedf5"
            android:layout_marginLeft="60dp"/>

<!--        <LinearLayout-->
<!--            android:id="@+id/btn_policy"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="56dp"-->
<!--            android:paddingLeft="25dp"-->
<!--            android:paddingRight="25dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:clickable="true">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Policy"-->
<!--                android:drawableLeft="@drawable/ic_policy_ico"-->
<!--                android:gravity="center_vertical"-->
<!--                android:drawablePadding="10dp"-->
<!--                style="@style/font15_263238_medium"/>-->

<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/btn_policy"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="Policy"
            android:drawableLeft="@drawable/ic_policy_ico"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            style="@style/font15_263238_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_eaedf5"
            android:layout_marginLeft="60dp"/>


<!--        <LinearLayout-->
<!--            android:id="@+id/btn_setting"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="56dp"-->
<!--            android:paddingLeft="25dp"-->
<!--            android:paddingRight="25dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:clickable="true">-->

<!--            <TextView-->
<!--                android:id="@+id/tv_setting"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/nav_content_007"-->
<!--                android:drawableLeft="@drawable/ic_setting_ico"-->
<!--                android:gravity="center_vertical"-->
<!--                android:drawablePadding="10dp"-->
<!--                style="@style/font15_263238_medium"/>-->

<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/btn_setting"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/nav_content_007"
            android:drawableLeft="@drawable/ic_setting_ico"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            style="@style/font15_263238_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_eaedf5"
            android:layout_marginLeft="60dp"/>

<!--        <LinearLayout-->
<!--            android:id="@+id/btn_signup"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="56dp"-->
<!--            android:paddingLeft="25dp"-->
<!--            android:paddingRight="25dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:clickable="true">-->

<!--            <TextView-->
<!--                android:id="@+id/tv_sign_up"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Sign Up"-->
<!--                android:drawableLeft="@drawable/ic_sign_up_ico"-->
<!--                android:gravity="center_vertical"-->
<!--                android:drawablePadding="10dp"-->
<!--                style="@style/font15_d7191f_medium"/>-->

<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="Sign Up"
            android:drawableLeft="@drawable/ic_sign_up_ico"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            style="@style/font15_d7191f_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_eaedf5"
            android:layout_marginLeft="60dp"/>


<!--        <LinearLayout-->
<!--            android:id="@+id/btn_login"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="56dp"-->
<!--            android:paddingLeft="25dp"-->
<!--            android:paddingRight="25dp"-->
<!--            android:gravity="center_vertical"-->
<!--            android:clickable="true">-->

<!--            <TextView-->
<!--                android:id="@+id/tv_login"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Login"-->
<!--                android:drawableLeft="@drawable/ic_login_ico"-->
<!--                android:gravity="center_vertical"-->
<!--                android:drawablePadding="10dp"-->
<!--                style="@style/font15_d7191f_medium"/>-->

<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="Login"
            android:drawableLeft="@drawable/ic_login_ico"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            style="@style/font15_d7191f_medium"/>

    </LinearLayout>
</layout>
